--- a/index.html
+++ b/index.html
@@ -46,6 +46,45 @@
 
   <section class="hero">
 
+    <div class="hero-image">
+      <img src="assets/sushi-1.png" alt="sushi">
+      <h2>
+        日 <br />
+        本 <br />
+        食
+      </h2>
+      <div class="hero-image__overlay"></div>
+    </div>
+    <div class="hero-content">
+      <div class="hero-content-info">
+        <h1>Feel the taste of japanese food</h1>
+        <p>Feel the taste of the most popular japenese food anywhere and anytime.</p>
+
+        <div class="hero-content__buttons">
+          <button class="hero-content__order-button">Order Now</button>
+          <button class="hero-content__play-button">
+            <img src="assets/play-circle.svg" alt="play">
+            How to order
+          </button>
+        </div>
+      </div>
+
+      <div class="hero-content__testimonial">
+        <div class="hero-content__customer flex-center">
+          <h4>24 <span>4k+</span></h4>
+          <p>Happy Customers</p>
+        </div>
+      </div>
+      <div class="hero-content__review">
+        <img src="assets/user.png" alt="user">
+        <p>"This is the best japanese food delivery service that ever existed.</p>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="hero">
+
   </section>
 
 
