--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="hero-content">
       <div class="hero-content-info">
-        <h1>Feel the taste of japanese food</h1>
+        <h1>Feel the taste of Japanese food</h1>
         <p>Feel the taste of the most popular japenese food anywhere and anytime.</p>
 
         <div class="hero-content__buttons">
@@ -71,13 +71,13 @@
 
       <div class="hero-content__testimonial">
         <div class="hero-content__customer flex-center">
-          <h4>24 <span>4k+</span></h4>
+          <h4>24<span>k+</span></h4>
           <p>Happy Customers</p>
         </div>
-      </div>
-      <div class="hero-content__review">
-        <img src="assets/user.png" alt="user">
-        <p>"This is the best japanese food delivery service that ever existed.</p>
+        <div class="hero-content__review">
+          <img src="assets/user.png" alt="user">
+          <p>"This is the best japanese food delivery service that ever existed.</p>
+        </div>
       </div>
     </div>
 
